verif/test/deca/context/invalid/initialization/assiging-string-to-bool-verif.res
src/test/deca/context/invalid/initialization/assiging-string-to-bool.deca:12:8: Cannot assign expression of type 'string' to a variable of type 'boolean'
